# dotfiles

./: .aider.chat.history.md  .aider.input.history  .bash_colors  .gitignore  .gitmodules  .pathrc  .pdm-python  .sparkleshare  50-wacom-options.conf  Package.txt  README.md  SageIpythonTests.ipynb  TODO.md  Untitled1.ipynb  Yip.yp3  ankdown.py  ankdown_card_snippets.txt  anki.desktop  api.py  autoinstall.sh  coc-settings.json  cursor-keybdindings.json  cursor-settings.json  custom_nvim.desktop  fzf.sh  gconf_dump.xml  i2c_fixes  include-files.lua  init.vim  insert-section-id.lua  installAtomPackages.sh  installPackages.sh  justfile  keybindings.json  llm_api.config.yaml  math_quotes.md  mathjax_config.js  myJSlibs.js  package-list.txt  packages (conflict 2018-08-17-20-40-11).list  (+17 more)
Xorg/: Xcolors  (+9 more)
pandoc/filters/sagemath-pandoc-filter.d/: MANIFEST.in  Makefile  README.md  check_sage.py  pyproject.toml  rename_package.py  requirements-test.txt  run_sage_tests.py  run_tests.py  run_tests.sh  run_tests_with_sage.sh  setup.py  test_sage_direct.py
pandoc/filters/sagemath-pandoc-filter.d/examples/: README.md  basic_sage_test.md  combined_sage_test.md  combined_sage_tests.md  sage_pdf_test.md  test_output.md
pandoc/filters/sagemath-pandoc-filter.d/sagemath_pandoc_filter/: __init__.py  __main__.py  cli.py  filter.py  main.py  sage_plot.py  sage_runner.py
pandoc/filters/sagemath-pandoc-filter.d/sagemath_pandoc_filter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pandoc/filters/sagemath-pandoc-filter.d/sagemath_pandoc_filter/tests/: __init__.py  test_plot_generation.py
pandoc/filters/sagemath-pandoc-filter.d/test_output/: embedded_plot_test.html
pandoc/filters/sagemath-pandoc-filter.d/tests/: README.md  __init__.py  base_test.py  conftest.py  debug_filter.py  mock_sage.py  mock_sage.py.backup  real_sage.py  test_expectations.py  test_filter_directly.py  test_html_embedding.py  test_pdf_output.py  test_pdf_output.py.bak  test_pdf_output_fixed.py  test_plot_generation.py  test_real_sage.py  test_sage_filter_fixed.py  test_sage_pdf_output.py  test_suite.py  test_suite.py.bak  torture_test.md
pandoc/filters/sagemath-pandoc-filter.d/tests/data/: __init__.py
(+3374 files in other folders)
