[project]
name = "dotfiles"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Zack Garza", email = "dzackgarza@gmail.com"},
]
dependencies = ["genanki>=0.13.1", "python-frontmatter>=1.1.0", "mistune>=3.1.3", "requests>=2.32.4"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
